--- a/index.html
+++ b/index.html
@@ -1,116 +1,168 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Студія</title>
-    <link rel="stylesheets" href="./css/styles.css">
-</head>
 
-<body>
- <!--Шапка-->
-<header>
-    <!--logo-header-->
-    <a href="">WebStudio</a>
-    <!--navigation-->
-<nav>
-    <ul>
-        <li><a href=" ">Студия</a></li>
-        <li><a href=" ">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
-    </ul>
-</nav>
-     <!--Cantacts info-->
-    <ul>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Студия</title>
+    <link rel="stylesheets" href="./css/styles.css" />
+  </head>
+
+  <body>
+    <!--Шапка-->
+    <header>
+      <!--logo-header-->
+      <a href="" lang="en">WebStudio</a>
+      <!--navigation-->
+      <nav>
+        <ul>
+          <li><a href="/index.html">Студия</a></li>
+          <li><a href="/portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
+        </ul>
+        <!-- ul>li*2>p+p швидке написання коду-->
+      </nav>
+      <!--Cantacts info-->
+      <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
-    </ul>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
 
-</header>
+    <!--main-->
 
-<!--main-->
+    <main>
+      <!--Hero-->
+        <section>
+          <h1>Эффективные решения для вашего бизнеса</h1>
+          <button type="button">Заказать услугу</button>
+        </section>
 
-<main>
-<!--Hero-->
-<!--div для стилізації-->
-<div>
-    <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">
-            Заказать услугу
-        </button>
-    </section>
-</div>
-
-<!--Чем мы занимаемся-->
-<section>
-    <ul>
-        <li>
+      <!--Чем мы занимаемся-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
             <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
             <h3>Пунктуальность</h3>
-            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
             <h3>Планирование</h3>
-            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
             <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-    </ul>
-</section>
-<!--Чем мы занимаемся(photos)-->
-<section>
-    <h2>Чем мы занимаемся</h2>
-    <ul>
-        <li><img src="./img/first-photo.jpg" alt="Работа с кодом" width="370" height="294"></li>
-        <li><img src="./img/second-photo.jpg" alt="Работа с дизайном" width="370" height="294"></li>
-        <li><img src="./img/third-photo.jpg" alt="Работа с цветом" width="370" height="294"></li>
-    </ul>
-</section>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!--Чем мы занимаемся(photos)-->
+      <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/first-photo.jpg"
+              alt="Работа с кодом"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/second-photo.jpg"
+              alt="Работа с дизайном"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/third-photo.jpg"
+              alt="Работа с цветом"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
 
-<!--Наша команда-->
-<section>
-    <h2>Наша команда</h2>
-    <ul>
-        <li><a href=""><img src="./img/teammate-1.jpg" alt="Дизайнер продукта" width="270" height="260">
-                <h3>Игорь Демьяненко</h3>
-                <p>Product Designer</p></a>
-        </li>
-        <li><a href=""><img src="./img/teammate-2.jpg" alt="Разработчик" width="270" height="260">
-                <h3>Ольга Репина</h3>
-                <p>Frontend Developer</p></a>
-        </li>
-        <li><a href=""><img src="./img/teammate-3.jpg" alt="Маркетолог" width="270" height="260">
-                <h3>Николай Тарасов</h3>
-                <p>Marketing</p></a>
-        </li>
-        <li><a href=""><img src="./img/teammate-4.jpg" alt="Дизайнер интерфейса" width="270" height="260">
-                <h3>Михаил Ермаков</h3>
-                <p>UI Designer</p></a>
-        </li>
-    </ul>
-</section>
+      <!--Наша команда-->
+      <section>
+        <h2>Наша команда</h2>
+        <ul>
+          <li>
+            <img
+                src="./img/teammate-1.jpg"
+                alt="Дизайнер продукта"
+                width="270"
+                height="260"
+              />
+              <h3>Игорь Демьяненко</h3>
+              <p>Product Designer</p>
+          </li>
+          <li>
+           <img
+                src="./img/teammate-2.jpg"
+                alt="Разработчик"
+                width="270"
+                height="260"
+              />
+              <h3>Ольга Репина</h3>
+              <p>Frontend Developer</p>
+          </li>
+          <li>
+           <img
+                src="./img/teammate-3.jpg"
+                alt="Маркетолог"
+                width="270"
+                height="260"
+              />
+              <h3>Николай Тарасов</h3>
+              <p>Marketing</p>
+          </li>
+          <li>
+            <img
+                src="./img/teammate-4.jpg"
+                alt="Дизайнер интерфейса"
+                width="270"
+                height="260"
+              />
+              <h3>Михаил Ермаков</h3>
+              <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
-</main>
+    <!--footer-->
+    <footer>
+      <!--logo-footer-->
+      <a href="" lang="en">WebStudio</a>
 
-<!--footer-->
-<footer>
-    <!--logo-footer-->
-    <a href="">WebStudio</a>
-
-    <address>
-г. Киев, пр-т Леси Украинки, 26
-    </address>
-    <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </address>
-</footer>
-</body>
+      <address>
+          <ul>
+              <li><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+      </address>
+    </footer>
+  </body>
 </html>
