--- a/portfolio.html
+++ b/portfolio.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-    <link rel="stylesheets" href="./css/styles.css">
-</head>
+    <link rel="stylesheets" href="./css/styles.css" />
+  </head>
 
-<body>
-<!--Шапка-->
-<header>
-    <!--logo-header-->
-    <a href="">WebStudio</a>
-    <!--navigation-->
-    <nav>
+  <body>
+    <!--Шапка-->
+    <header>
+      <!--logo-header-->
+      <a href="" lang="en">WebStudio</a>
+      <!--navigation-->
+      <nav>
         <ul>
-            <li><a href=" ">Студия</a></li>
-            <li><a href="/portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+          <li><a href="/index.html">Студия</a></li>
+          <li><a href="/portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
-    </nav>
-    <!--Cantacts info-->
-    <ul>
+      </nav>
+      <!--Cantacts info-->
+      <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
-    </ul>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
+    </header>
+    <!--main-->
 
-</header>
-<!--main-->
-
-<!--footer-->
-<footer>
-    <!--logo-footer-->
-    <a href="">WebStudio</a>
-
-    <address>
-        г. Киев, пр-т Леси Украинки, 26
-    </address>
-    <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-    </address>
-</footer>
-</body>
+    <!--footer-->
+    <footer>
+      <!--logo-footer-->
+      <a href="" lang="en">WebStudio</a>
+    
+      <address>
+        <ul>
+          <li><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+              Украинки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
