--- a/examination.html
+++ b/examination.html
@@ -1,24 +1,313 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Examination" />
+    <title>Examination</title>
+    <link rel="stylesheets" href="./css/styles.css" />
   </head>
   <body>
-      <!-- header -->
-      <header>
+    <!-- header -->
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Наши Проекты</a></li>
+          <li><a href="#">Услуги</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#contacts">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- main -->
+    <main>
+      <!-- hero -->
+      <section>
+        <!-- h1+p+button -->
+        <h1>Передовая IТ студия</h1>
+        <p>Мы создаем легкие решения сложных задач и проблем</p>
+        <a href="">Наши Проекты</a>
+        <!-- <button type="button">Наши Проекты</button> -->
+        <img src="./img/second-photo.jpg" alt="фон" />
+      </section>
 
-      </header>
-      <!-- main -->
-      <main>
+      <!-- Мы создаем... -->
+      <section>
+        <h2>Мы создаем мобильные приложения для крупных корпораций</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil
+          temporibus iure atque, eum modi delectus enim ex officia quia pariatur
+          molestias architecto assumenda doloremque vitae. Ut exercitationem
+          ipsa perspiciatis nulla.
+        </p>
+        <ul>
+          <li>
+            <h3>Создание сайтов</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+              aut soluta officiis minus corrupti iste itaque fuga quidem eaque
+              error consectetur sint nostrum veritatis sapiente voluptatibus
+              cumque, iure rerum enim.
+            </p>
+            <img src="./img/third-photo.jpg" alt="" width="110" height="110" />
+          </li>
+          <li>
+            <h3>Создание сайтов</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+              aut soluta officiis minus corrupti iste itaque fuga quidem eaque
+              error consectetur sint nostrum veritatis sapiente voluptatibus
+              cumque, iure rerum enim.
+            </p>
+            <img src="./img/third-photo.jpg" alt="" width="110" height="110" />
+          </li>
+          <li>
+            <h3>Создание сайтов</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+              aut soluta officiis minus corrupti iste itaque fuga quidem eaque
+              error consectetur sint nostrum veritatis sapiente voluptatibus
+              cumque, iure rerum enim.
+            </p>
+            <img src="./img/third-photo.jpg" alt="" width="110" height="110" />
 
-      </main>
+            <a href="">Все услуги</a>
+          </li>
+        </ul>
+      </section>
+      <!-- Высокие стандарты разработки -->
+      <section>
+        <h3>Высокие стандарты разработки</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, vero
+          doloribus? Corporis facere nam nihil quasi reiciendis quaerat
+          exercitationem harum, dolore error odio, cum officiis saepe quos ex
+          mollitia pariatur.
+        </p>
+        <a href="">Подробнее о компании</a>
+        <img
+          src="./img/first-photo.jpg"
+          alt="компуктер"
+          width="540"
+          height="375"
+        />
+      </section>
+      <!-- Количество проектов -->
+      <section>
+        <h2>Количество проектов</h2>
+        <ul>
+          <li>
+            <a href=""
+              ><h3>125</h3>
+              <p>Our projects</p>
+              <img
+                src="./img/teammate-1.jpg"
+                alt="изображения проектов"
+                width="30"
+                height="30"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><h3>125</h3>
+              <p>Our projects</p>
+              <img
+                src="./img/teammate-1.jpg"
+                alt="изображения проектов"
+                width="30"
+                height="30"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><h3>125</h3>
+              <p>Our projects</p>
+              <img
+                src="./img/teammate-1.jpg"
+                alt="изображения проектов"
+                width="30"
+                height="30"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><h3>125</h3>
+              <p>Our projects</p>
+              <img
+                src="./img/teammate-1.jpg"
+                alt="изображения проектов"
+                width="30"
+                height="30"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><h3>125</h3>
+              <p>Our projects</p>
+              <img
+                src="./img/teammate-1.jpg"
+                alt="изображения проектов"
+                width="30"
+                height="30"
+            /></a>
+          </li>
+        </ul>
+      </section>
 
-      <!-- footer -->
-      <footer>
+      <!-- Сервисы -->
+      <section>
+        <h2>Наши работы, на которых мы специализируемся</h2>
+        <ul>
+          <li>
+            <img src="" alt="иследование" />
+            <h3><span>01.</span> Исследование и упаковка</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi
+              laboriosam possimus iusto, voluptatem cupiditate aperiam delectus
+              veniam maxime? Dolor eum dolorem alias quia harum vero laboriosam
+              earum velit corporis quod.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
+          <li>
+            <img src="" alt="иследование" />
+            <h3><span>01.</span> Исследование и упаковка</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi
+              laboriosam possimus iusto, voluptatem cupiditate aperiam delectus
+              veniam maxime? Dolor eum dolorem alias quia harum vero laboriosam
+              earum velit corporis quod.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
+          <li>
+            <img src="" alt="иследование" />
+            <h3><span>01.</span> Исследование и упаковка</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi
+              laboriosam possimus iusto, voluptatem cupiditate aperiam delectus
+              veniam maxime? Dolor eum dolorem alias quia harum vero laboriosam
+              earum velit corporis quod.
+            </p>
+            <a href="">Подробнее</a>
+          </li>
+        </ul>
+      </section>
 
-      </footer>
+      <!-- Наши проекты -->
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi earum
+          beatae exercitationem nobis reprehenderit atque vel in inventore
+          deserunt delectus unde architecto obcaecati laborum autem at aperiam
+          repudiandae, vero error?
+        </p>
+        <ul>
+          <li>
+            <img src="./img/teammate-3.jpg" alt="" width="240" height="350" />
+          </li>
+          <li>
+            <img src="./img/teammate-3.jpg" alt="" width="240" height="350" />
+          </li>
+          <li>
+            <img src="./img/teammate-3.jpg" alt="" width="240" height="350" />
+          </li>
+          <li>
+            <img src="./img/teammate-3.jpg" alt="" width="240" height="350" />
+          </li>
+        </ul>
+        <a href="">Все проекты</a>
+      </section>
+
+      <!-- Video -->
+      <section>
+        <h2>Видео о нашей работе</h2>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla,
+          libero officia. Nesciunt, doloremque ex eaque blanditiis cum nam
+          eligendi laborum deserunt explicabo illum temporibus sunt et autem?
+          Quae, sunt harum?
+        </p>
+        <iframe
+          width="885"
+          height="498"
+          src="https://www.youtube.com/embed/21qNxnCS8WU"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+
+        <button type="button">Смотреть видео</button>
+      </section>
+      <!-- Subscription -->
+      <section>
+        <h2 hidden>Подписка</h2>
+        <form action=""></form>
+        <strong>Подпишитесь на нашу страницу</strong>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae
+          consectetur adipisci, quos ea ullam voluptate distinctio eligendi
+          dolor quasi illum tempora qui est, iste ducimus. Ullam voluptatibus
+          aperiam iusto eaque!
+        </p>
+        <input type="text" />
+        <button type="button"></button>
+      </section>
+    </main>
+
+    <!-- footer -->
+    <footer>
+      <!-- contacts -->
+      <div id="contacts">
+        <h2>Контактна инфо</h2>
+        <address>
+          <ul>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+            <li><a href=""></a></li>
+          </ul>
+        </address>
+      </div>
+
+      <ul>
+        <li>
+          <h2>Основные сылки</h2>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <h2>Наши Проекты</h2>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <h2>Соц сети</h2>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </li>
+      </ul>
+      <p>&copy; Все права защищены</p>
+    </footer>
   </body>
 </html>
