--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <!--Чем мы занимаемся-->
       <section>
-        <h2>Чем мы занимаемся</h2>
+        <h2 hidden>Чем мы занимаемся</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
