--- a/portfolio.html
+++ b/portfolio.html
@@ -29,15 +29,35 @@
     </header>
     <!--main-->
 
+    Технокряк Постер New Orlean vs Golden Star Ресторан Seafood Веб-сайт Дизайн
+    Приложение Проект Prime Проект Boxes Inspiration has no Borders Маркетинг
+    Приложение Веб-сайт Издание Limited Edition Проект LAB Growing Business
+    Дизайн Маркетинг Приложение
+    <!-- Навигация Портфолио -->
+    <h1 hidden>Навигация Портфолио</h1>
+    <ul>
+      <li><button type="button">Все</button></li>
+      <li><button type="button">Веб-сайты</button></li>
+      <li><button type="button">Приложения</button></li>
+      <li><button type="button">Дизайн</button></li>
+      <li><button type="button">Маркетинг</button></li>
+    </ul>
+
     <!--footer-->
     <footer>
       <!--logo-footer-->
       <a href="" lang="en">WebStudio</a>
-    
+
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
-              Украинки, 26</a></li>
+          <li>
+            <a
+              href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
+              target="_blank"
+              rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
