--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,66 @@
       </ul>
     </header>
     <!--main-->
+    <main>
+      <!-- Навигация Портфолио -->
+      <h1 hidden>Навигация Портфолио</h1>
+      <ul>
+        <li><button type="button">Все</button></li>
+        <li><button type="button">Веб-сайты</button></li>
+        <li><button type="button">Приложения</button></li>
+        <li><button type="button">Дизайн</button></li>
+        <li><button type="button">Маркетинг</button></li>
+      </ul>
 
-    Технокряк Постер New Orlean vs Golden Star Ресторан Seafood Веб-сайт Дизайн
-    Приложение Проект Prime Проект Boxes Inspiration has no Borders Маркетинг
-    Приложение Веб-сайт Издание Limited Edition Проект LAB Growing Business
-    Дизайн Маркетинг Приложение
-    <!-- Навигация Портфолио -->
-    <h1 hidden>Навигация Портфолио</h1>
-    <ul>
-      <li><button type="button">Все</button></li>
-      <li><button type="button">Веб-сайты</button></li>
-      <li><button type="button">Приложения</button></li>
-      <li><button type="button">Дизайн</button></li>
-      <li><button type="button">Маркетинг</button></li>
-    </ul>
+      <!-- Карточки -->
+      <ul>
+        <li>
+          <img src="" alt="" />
+          <h2>Технокряк</h2>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Постер New Orlean vs Golden Star</h2>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Ресторан Seafood</h2>
+          <p>Приложение</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Проект Prime</h2>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Проект Boxes</h2>
+          <p>Приложение</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Inspiration has no Borders</h2>
+          <p>Веб-сайт</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Издание Limited Edition</h2>
+          <p>Дизайн</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Проект LAB</h2>
+          <p>Маркетинг</p>
+        </li>
+        <li>
+          <img src="" alt="" />
+          <h2>Growing Business</h2>
+          <p>Приложение</p>
+        </li>
+      </ul>
+    </main>
 
     <!--footer-->
     <footer>
