--- a/portfolio.html
+++ b/portfolio.html
@@ -42,49 +42,65 @@
       <!-- Карточки -->
       <ul>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-1.jpg" alt="Ноутбук с веб-сайтом" width="370" height="294" />
           <h2>Технокряк</h2>
           <p>Веб-сайт</p>
         </li>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-2.jpg" alt="Постер" width="370" height="294" />
           <h2>Постер New Orlean vs Golden Star</h2>
           <p>Дизайн</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <a>
+            <img src="./img/card-3.jpg" alt="Логотип ресторана" width="370" height="294" />
           <h2>Ресторан Seafood</h2>
           <p>Приложение</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-4.jpg" alt="Наушники" width="370" height="294" />
           <h2>Проект Prime</h2>
           <p>Маркетинг</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-5.jpg" alt="Две коробки" width="370" height="294" />
           <h2>Проект Boxes</h2>
           <p>Приложение</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <img src="./img/card-6.jpg" alt="Монитор с веб-сайтом" width="370" height="294" />
           <h2>Inspiration has no Borders</h2>
           <p>Веб-сайт</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-7.jpg" alt="Книга с рисунками" width="370" height="294" />
           <h2>Издание Limited Edition</h2>
           <p>Дизайн</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-8.jpg" alt="Бирка" width="370" height="294" />
           <h2>Проект LAB</h2>
           <p>Маркетинг</p>
+          </a>
         </li>
         <li>
-          <img src="" alt="" />
+          <a href="">
+            <img src="./img/card-9.jpg" alt="Ноутбук с приложением" width="370" height="294" />
           <h2>Growing Business</h2>
           <p>Приложение</p>
+          </a>
         </li>
       </ul>
     </main>
