--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheets" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
 
   <body>
     <!--Шапка-->
-    <header>
-      <!--logo-header-->
-      <a href="" lang="en">WebStudio</a>
+    <header class="page-header">
+      <!--brand-name-header-->
+      <a href="" class="brandname" lang="en"><span class="brandname-accent">Web</span>Studio</a>
       <!--navigation-->
       <nav>
-        <ul>
+        <ul class="site-nav">
           <li><a href="/index.html">Студия</a></li>
           <li><a href="/portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
@@ -23,7 +23,7 @@
         <!-- ul>li*2>p+p швидке написання коду-->
       </nav>
       <!--Cantacts info-->
-      <ul>
+      <ul class="contacts">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -33,39 +33,39 @@
 
     <main>
       <!--Hero-->
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
+        <section class="hero">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="hero-button">Заказать услугу</button>
         </section>
 
       <!--Чем мы занимаемся-->
-      <section>
+      <section class="sphere">
         <h2 hidden>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="sphere-list">
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="sphere-title">Внимание к деталям</h3>
+            <p class="sphere-content">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="sphere-title">Пунктуальность</h3>
+            <p class="sphere-content">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="sphere-title">Планирование</h3>
+            <p class="sphere-content">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="sphere-title">Современные технологии</h3>
+            <p> class="sphere-content"
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -74,8 +74,8 @@
       </section>
       <!--Чем мы занимаемся(photos)-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="sphere-heading">Чем мы занимаемся</h2>
+        <ul class="sphere-photos">
           <li>
             <img
               src="./img/first-photo.jpg"
@@ -104,61 +104,61 @@
       </section>
 
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
                 src="./img/teammate-1.jpg"
                 alt="Дизайнер продукта"
                 width="270"
                 height="260"
               />
-              <h3>Игорь Демьяненко</h3>
-              <p>Product Designer</p>
+              <h3 class="team-mate">Игорь Демьяненко</h3>
+              <p class="team-position">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
            <img
                 src="./img/teammate-2.jpg"
                 alt="Разработчик"
                 width="270"
                 height="260"
               />
-              <h3>Ольга Репина</h3>
-              <p>Frontend Developer</p>
+              <h3 class="team-mate">Ольга Репина</h3>
+              <p class="team-position">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
            <img
                 src="./img/teammate-3.jpg"
                 alt="Маркетолог"
                 width="270"
                 height="260"
               />
-              <h3>Николай Тарасов</h3>
-              <p>Marketing</p>
+              <h3 class="team-mate">Николай Тарасов</h3>
+              <p class="team-position">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
                 src="./img/teammate-4.jpg"
                 alt="Дизайнер интерфейса"
                 width="270"
                 height="260"
               />
-              <h3>Михаил Ермаков</h3>
-              <p>UI Designer</p>
+              <h3 class="team-mate">Михаил Ермаков</h3>
+              <p class="team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
 
     <!--footer-->
-    <footer>
+    <footer class="page-footer">
       <!--logo-footer-->
-      <a href="" lang="en">WebStudio</a>
+      <a href="" class="brandname" lang="en"><span class="brandname-accent">Web</span>Studio</a>
 
       <address>
-          <ul>
-              <li><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <ul class="contacts">
+              <li class="contacts-geoposition"><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
               <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
               <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
           </ul>
