--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <!--navigation-->
       <nav>
         <ul class="site-nav">
-          <li><a href="/index.html">Студия</a></li>
-          <li><a href="/portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a href="/index.html" class="link">Студия</a></li>
+          <li><a href="/portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
         <!-- ul>li*2>p+p швидке написання коду-->
       </nav>
       <!--Cantacts info-->
       <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -34,37 +34,37 @@
     <main>
       <!--Hero-->
         <section class="hero">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <h1 >Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero-button">Заказать услугу</button>
         </section>
 
       <!--Чем мы занимаемся-->
-      <section class="sphere">
+      <section class="section">
         <h2 hidden>Чем мы занимаемся</h2>
         <ul class="sphere-list">
           <li>
-            <h3 class="sphere-title">Внимание к деталям</h3>
+            <h3 class="section-title">Внимание к деталям</h3>
             <p class="sphere-content">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="sphere-title">Пунктуальность</h3>
+            <h3 class="section-title">Пунктуальность</h3>
             <p class="sphere-content">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="sphere-title">Планирование</h3>
+            <h3 class="section-title">Планирование</h3>
             <p class="sphere-content">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="sphere-title">Современные технологии</h3>
+            <h3 class="section-title">Современные технологии</h3>
             <p> class="sphere-content"
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -73,8 +73,8 @@
         </ul>
       </section>
       <!--Чем мы занимаемся(photos)-->
-      <section>
-        <h2 class="sphere-heading">Чем мы занимаемся</h2>
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="sphere-photos">
           <li>
             <img
@@ -104,8 +104,8 @@
       </section>
 
       <!--Наша команда-->
-      <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul class="team-list">
           <li class="team-item">
             <img
@@ -114,7 +114,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-mate">Игорь Демьяненко</h3>
+              <h3 class="section-title">Игорь Демьяненко</h3>
               <p class="team-position">Product Designer</p>
           </li>
           <li class="team-item">
@@ -124,7 +124,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-mate">Ольга Репина</h3>
+              <h3 class="section-title">Ольга Репина</h3>
               <p class="team-position">Frontend Developer</p>
           </li>
           <li class="team-item">
@@ -134,7 +134,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-mate">Николай Тарасов</h3>
+              <h3 class="section-title">Николай Тарасов</h3>
               <p class="team-position">Marketing</p>
           </li>
           <li class="team-item">
@@ -144,7 +144,7 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-mate">Михаил Ермаков</h3>
+              <h3 class="section-title">Михаил Ермаков</h3>
               <p class="team-position">UI Designer</p>
           </li>
         </ul>
@@ -159,8 +159,8 @@
       <address>
           <ul class="contacts">
               <li class="contacts-geoposition"><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+              <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
+              <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
           </ul>
       </address>
     </footer>
