Ending with classification and color
Підбір всієї кольорової гамми та її розподілення

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Шапка-->
     <header class="page-header">
       <!--brand-name-header-->
-      <a href="" class="brandname" lang="en"><span class="brandname-accent">Web</span>Studio</a>
+      <a href="" class="brandname" lang="en"><span class="brandname-one">Web</span>Studio</a>
       <!--navigation-->
       <nav>
         <ul class="site-nav">
@@ -24,8 +24,8 @@
       </nav>
       <!--Cantacts info-->
       <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="contacts-nav">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="contacts-nav">+38 096 111 11 11</a></li>
       </ul>
     </header>
 
@@ -44,28 +44,28 @@
         <ul class="sphere-list">
           <li>
             <h3 class="section-title">Внимание к деталям</h3>
-            <p class="sphere-content">
+            <p class="section-content">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="section-title">Пунктуальность</h3>
-            <p class="sphere-content">
+            <p class="section-content">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="section-title">Планирование</h3>
-            <p class="sphere-content">
+            <p class="section-content">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="section-title">Современные технологии</h3>
-            <p> class="sphere-content"
+            <p class="section-content">  
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -104,7 +104,7 @@
       </section>
 
       <!--Наша команда-->
-      <section class="section">
+      <section class="team-section">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list">
           <li class="team-item">
@@ -115,7 +115,7 @@
                 height="260"
               />
               <h3 class="section-title">Игорь Демьяненко</h3>
-              <p class="team-position">Product Designer</p>
+              <p class="section-content">Product Designer</p>
           </li>
           <li class="team-item">
            <img
@@ -125,7 +125,7 @@
                 height="260"
               />
               <h3 class="section-title">Ольга Репина</h3>
-              <p class="team-position">Frontend Developer</p>
+              <p class="section-content">Frontend Developer</p>
           </li>
           <li class="team-item">
            <img
@@ -135,7 +135,7 @@
                 height="260"
               />
               <h3 class="section-title">Николай Тарасов</h3>
-              <p class="team-position">Marketing</p>
+              <p class="section-content">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -145,7 +145,7 @@
                 height="260"
               />
               <h3 class="section-title">Михаил Ермаков</h3>
-              <p class="team-position">UI Designer</p>
+              <p class="section-content">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -154,11 +154,11 @@
     <!--footer-->
     <footer class="page-footer">
       <!--logo-footer-->
-      <a href="" class="brandname" lang="en"><span class="brandname-accent">Web</span>Studio</a>
+      <a href="" class="brandname" lang="en"><span class="brandname-one">Web</span><span class="brandname-two">Studio</span></a>
 
       <address>
           <ul class="contacts">
-              <li class="contacts-geoposition"><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer" class="contacts-geoposition">г. Киев, пр-т Леси Украинки, 26</a></li>
               <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
               <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
           </ul>
