--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <!--Шапка-->
     <header class="page-header">
       <!--brand-name-header-->
-      <a href="" class="brandname" lang="en"><span class="brandname-one">Web</span>Studio</a>
+      <a href="" class="brandname" lang="en"
+        ><span class="brandname-one">Web</span>Studio</a
+      >
       <!--navigation-->
       <nav>
         <ul class="site-nav">
@@ -24,8 +26,14 @@
       </nav>
       <!--Cantacts info-->
       <ul class="contacts">
-        <li><a href="mailto:info@devstudio.com" class="contacts-nav">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contacts-nav">+38 096 111 11 11</a></li>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contacts-nav"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a href="tel:+380961111111" class="contacts-nav">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
 
@@ -33,10 +41,10 @@
 
     <main>
       <!--Hero-->
-        <section class="hero">
-          <h1 >Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="hero-button">Заказать услугу</button>
-        </section>
+      <section class="hero">
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button" class="hero-button">Заказать услугу</button>
+      </section>
 
       <!--Чем мы занимаемся-->
       <section class="section">
@@ -65,7 +73,7 @@
           </li>
           <li>
             <h3 class="section-title">Современные технологии</h3>
-            <p class="section-content">  
+            <p class="section-content">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -109,43 +117,43 @@
         <ul class="team-list">
           <li class="team-item">
             <img
-                src="./img/teammate-1.jpg"
-                alt="Дизайнер продукта"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Игорь Демьяненко</h3>
-              <p class="section-content">Product Designer</p>
-          </li>
-          <li class="team-item">
-           <img
-                src="./img/teammate-2.jpg"
-                alt="Разработчик"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Ольга Репина</h3>
-              <p class="section-content">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-           <img
-                src="./img/teammate-3.jpg"
-                alt="Маркетолог"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Николай Тарасов</h3>
-              <p class="section-content">Marketing</p>
+              src="./img/teammate-1.jpg"
+              alt="Дизайнер продукта"
+              width="270"
+              height="260"
+            />
+            <h3 class="section-title">Игорь Демьяненко</h3>
+            <p class="section-content">Product Designer</p>
           </li>
           <li class="team-item">
             <img
-                src="./img/teammate-4.jpg"
-                alt="Дизайнер интерфейса"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Михаил Ермаков</h3>
-              <p class="section-content">UI Designer</p>
+              src="./img/teammate-2.jpg"
+              alt="Разработчик"
+              width="270"
+              height="260"
+            />
+            <h3 class="section-title">Ольга Репина</h3>
+            <p class="section-content">Frontend Developer</p>
+          </li>
+          <li class="team-item">
+            <img
+              src="./img/teammate-3.jpg"
+              alt="Маркетолог"
+              width="270"
+              height="260"
+            />
+            <h3 class="section-title">Николай Тарасов</h3>
+            <p class="section-content">Marketing</p>
+          </li>
+          <li class="team-item">
+            <img
+              src="./img/teammate-4.jpg"
+              alt="Дизайнер интерфейса"
+              width="270"
+              height="260"
+            />
+            <h3 class="section-title">Михаил Ермаков</h3>
+            <p class="section-content">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -154,14 +162,33 @@
     <!--footer-->
     <footer class="page-footer">
       <!--logo-footer-->
-      <a href="" class="brandname" lang="en"><span class="brandname-one">Web</span><span class="brandname-two">Studio</span></a>
+      <a href="" class="brandname" lang="en"
+        ><span class="brandname-one">Web</span
+        ><span class="brandname-two">Studio</span></a
+      >
 
       <address>
-          <ul class="contacts">
-              <li><a href="https://goo.gl/maps/2GUoueHVRLLiKJBr9" target="_blank" rel="noopener noreferrer" class="contacts-geoposition">г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-              <li><a href="tel:+380961111111" class="contacts-link">+38 096 111 11 11</a></li>
-          </ul>
+        <ul class="contacts">
+          <li>
+            <a
+              href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="contacts-geoposition"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="contacts-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
