--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -17,15 +23,17 @@
       >
       <!--navigation-->
       <nav>
-        <ul class="site-nav">
-          <li><a href="/index.html" class="link">Студия</a></li>
+        <ul class="site-nav list">
+          <li>
+            <a href="/index.html" class="link">Студия</a>
+          </li>
           <li><a href="/portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <!-- ul>li*2>p+p швидке написання коду-->
       </nav>
-      <!--Cantacts info-->
-      <ul class="contacts">
+      <!--Contacts info-->
+      <ul class="contacts list">
         <li>
           <a href="mailto:info@devstudio.com" class="contacts-nav"
             >info@devstudio.com</a
@@ -42,14 +50,17 @@
     <main>
       <!--Hero-->
       <section class="hero">
-        <h1>Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
 
       <!--Чем мы занимаемся-->
       <section class="section">
         <h2 hidden>Чем мы занимаемся</h2>
-        <ul class="sphere-list">
+        <ul class="list">
           <li>
             <h3 class="section-title">Внимание к деталям</h3>
             <p class="section-content">
@@ -82,8 +93,8 @@
       </section>
       <!--Чем мы занимаемся(photos)-->
       <section class="section">
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="sphere-photos">
+        <h2 class="section-heading">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./img/first-photo.jpg"
@@ -113,8 +124,8 @@
 
       <!--Наша команда-->
       <section class="team-section">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
+        <h2 class="section-heading">Наша команда</h2>
+        <ul class="list">
           <li class="team-item">
             <img
               src="./img/teammate-1.jpg"
@@ -168,7 +179,7 @@
       >
 
       <address>
-        <ul class="contacts">
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
