--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
@@ -17,15 +23,15 @@
       >
       <!--navigation-->
       <nav>
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li><a href="/index.html" class="link">Студия</a></li>
           <li><a href="/portfolio.html" class="link">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
         <!-- ul>li*2>p+p швидке написання коду-->
       </nav>
-      <!--Cantacts info-->
-      <ul class="contacts">
+      <!--Contacts info-->
+      <ul class="contacts list">
         <li>
           <a href="mailto:info@devstudio.com" class="contacts-nav"
             >info@devstudio.com</a
@@ -40,7 +46,7 @@
     <main>
       <!-- Навигация Портфолио -->
       <h1 hidden>Навигация Портфолио</h1>
-      <ul>
+      <ul class="list">
         <li><button type="button" class="buttons">Все</button></li>
         <li><button type="button" class="buttons">Веб-сайты</button></li>
         <li><button type="button" class="buttons">Приложения</button></li>
@@ -49,72 +55,108 @@
       </ul>
 
       <!-- Карточки -->
-      <ul>
+      <ul class="list">
         <li>
-          <a href="">
-            <img src="./img/card-1.jpg" alt="Ноутбук с веб-сайтом" width="370" height="294" />
-          <h2 class="section-title">Технокряк</h2>
-          <p class="section-content">Веб-сайт</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-1.jpg"
+              alt="Ноутбук с веб-сайтом"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Технокряк</h2>
+            <p class="cards-content">Веб-сайт</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="cards">
             <img src="./img/card-2.jpg" alt="Постер" width="370" height="294" />
-          <h2>Постер New Orlean vs Golden Star</h2>
-          <p class="section-content">Дизайн</p>
+            <h2 class="cards">Постер New Orlean vs Golden Star</h2>
+            <p class="cards-content">Дизайн</p>
           </a>
         </li>
         <li>
-          <a>
-            <img src="./img/card-3.jpg" alt="Логотип ресторана" width="370" height="294" />
-          <h2 class="section-title">Ресторан Seafood</h2>
-          <p class="section-content">Приложение</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-3.jpg"
+              alt="Логотип ресторана"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Ресторан Seafood</h2>
+            <p class="cards-content">Приложение</p>
           </a>
         </li>
         <li>
-          <a href="">
-            <img src="./img/card-4.jpg" alt="Наушники" width="370" height="294" />
-          <h2 class="section-title">Проект Prime</h2>
-          <p class="section-content">Маркетинг</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-4.jpg"
+              alt="Наушники"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Проект Prime</h2>
+            <p class="cards-content">Маркетинг</p>
           </a>
         </li>
         <li>
-          <a href="">
-            <img src="./img/card-5.jpg" alt="Две коробки" width="370" height="294" />
-          <h2 class="section-title">Проект Boxes</h2>
-          <p class="section-content">Приложение</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-5.jpg"
+              alt="Две коробки"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Проект Boxes</h2>
+            <p class="cards-content">Приложение</p>
           </a>
         </li>
         <li>
-          <img src="./img/card-6.jpg" alt="Монитор с веб-сайтом" width="370" height="294" />
-          <h2 class="section-title">Inspiration has no Borders</h2>
-          <p class="section-content">Веб-сайт</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-6.jpg"
+              alt="Монитор с веб-сайтом"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Inspiration has no Borders</h2>
+            <p class="cards-content">Веб-сайт</p>
           </a>
         </li>
         <li>
-          <a href="">
-            <img src="./img/card-7.jpg" alt="Книга с рисунками" width="370" height="294" />
-          <h2 class="section-title">Издание Limited Edition</h2>
-          <p class="section-content">Дизайн</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-7.jpg"
+              alt="Книга с рисунками"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Издание Limited Edition</h2>
+            <p class="cards-content">Дизайн</p>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" class="cards">
             <img src="./img/card-8.jpg" alt="Бирка" width="370" height="294" />
-          <h2 class="section-title">Проект LAB</h2>
-          <p class="section-content">Маркетинг</p>
+            <h2 class="cards">Проект LAB</h2>
+            <p class="cards-content">Маркетинг</p>
           </a>
         </li>
         <li>
-          <a href="">
-            <img src="./img/card-9.jpg" alt="Ноутбук с приложением" width="370" height="294" />
-          <h2 class="section-title">Growing Business</h2>
-          <p class="section-content">Приложение</p>
+          <a href="" class="cards">
+            <img
+              src="./img/card-9.jpg"
+              alt="Ноутбук с приложением"
+              width="370"
+              height="294"
+            />
+            <h2 class="cards">Growing Business</h2>
+            <p class="cards-content">Приложение</p>
           </a>
         </li>
       </ul>
     </main>
-    
+
     <!--footer-->
     <footer class="page-footer">
       <!--logo-footer-->
@@ -124,7 +166,7 @@
       >
 
       <address>
-        <ul class="contacts">
+        <ul class="list">
           <li>
             <a
               href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
