--- a/portfolio.html
+++ b/portfolio.html
@@ -16,31 +16,37 @@
 
   <body>
     <!--Шапка-->
-    <header class="page-header">
+    <header class="page-header container">
       <!--brand-name-header-->
       <a href="" class="brandname" lang="en"
         ><span class="brandname-one">Web</span>Studio</a
       >
       <!--navigation-->
-      <nav>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
-        </ul>
-        <!-- ul>li*2>p+p швидке написання коду-->
-      </nav>
+      <div class="container">
+        <nav>
+          <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+          </ul>
+          <!-- ul>li*2>p+p швидке написання коду-->
+        </nav>
+      </div>
       <!--Contacts info-->
-      <ul class="contacts list">
-        <li>
-          <a href="mailto:info@devstudio.com" class="contacts-nav"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="contacts-nav">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container">
+        <ul class="contacts list">
+          <li>
+            <a href="mailto:info@devstudio.com" class="contacts-nav"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="contacts-nav"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
     <!--main-->
     <main>
@@ -171,34 +177,35 @@
     <!--footer-->
     <footer class="page-footer">
       <!--logo-footer-->
-      <a href="" class="brandname" lang="en"
-        ><span class="brandname-one">Web</span
-        ><span class="brandname-two">Studio</span></a
-      >
-
-      <address>
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="contacts-geoposition"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contacts-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="contacts-link"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="brandname" lang="en"
+          ><span class="brandname-one">Web</span
+          ><span class="brandname-two">Studio</span></a
+        >
+        <address>
+          <ul class="list">
+            <li>
+              <a
+                href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="contacts-geoposition"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="contacts-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="contacts-link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
