Зробив поле карток портфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
       <section>
         <!-- Навигация Портфолио -->
         <h1 hidden>Навигация Портфолио</h1>
-        <ul class="list">
+        <ul class="button-row list container">
           <li><button type="button" class="buttons">Все</button></li>
           <li><button type="button" class="buttons">Веб-сайты</button></li>
           <li><button type="button" class="buttons">Приложения</button></li>
@@ -61,116 +61,144 @@
           <li><button type="button" class="buttons">Маркетинг</button></li>
         </ul>
         <!-- Карточки -->
-        <ul class="list">
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-1.jpg"
-                alt="Ноутбук с веб-сайтом"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Технокряк</h2>
-              <p class="cards-content">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-2.jpg"
-                alt="Постер"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Постер New Orlean vs Golden Star</h2>
-              <p class="cards-content">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-3.jpg"
-                alt="Логотип ресторана"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Ресторан Seafood</h2>
-              <p class="cards-content">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-4.jpg"
-                alt="Наушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Проект Prime</h2>
-              <p class="cards-content">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-5.jpg"
-                alt="Две коробки"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Проект Boxes</h2>
-              <p class="cards-content">Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-6.jpg"
-                alt="Монитор с веб-сайтом"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Inspiration has no Borders</h2>
-              <p class="cards-content">Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-7.jpg"
-                alt="Книга с рисунками"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Издание Limited Edition</h2>
-              <p class="cards-content">Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-8.jpg"
-                alt="Бирка"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Проект LAB</h2>
-              <p class="cards-content">Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="" class="cards">
-              <img
-                src="./img/card-9.jpg"
-                alt="Ноутбук с приложением"
-                width="370"
-                height="294"
-              />
-              <h2 class="cards">Growing Business</h2>
-              <p class="cards-content">Приложение</p>
-            </a>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="card-set list">
+            <li class="card-item">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-1.jpg"
+                  alt="Ноутбук с веб-сайтом"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Технокряк</h2>
+                  <p class="cards-content">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-2.jpg"
+                  alt="Постер"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Постер New Orlean vs Golden Star</h2>
+                  <p class="cards-content">Дизайн</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-3.jpg"
+                  alt="Логотип ресторана"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Ресторан Seafood</h2>
+                  <p class="cards-content">Приложение</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-4.jpg"
+                  alt="Наушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Проект Prime</h2>
+                  <p class="cards-content">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-5.jpg"
+                  alt="Две коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Проект Boxes</h2>
+                  <p class="cards-content">Приложение</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-6.jpg"
+                  alt="Монитор с веб-сайтом"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Inspiration has no Borders</h2>
+                  <p class="cards-content">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item photos">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-7.jpg"
+                  alt="Книга с рисунками"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Издание Limited Edition</h2>
+                  <p class="cards-content">Дизайн</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item photos">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-8.jpg"
+                  alt="Бирка"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Проект LAB</h2>
+                  <p class="cards-content">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="card-item photos">
+              <a href="" class="cards">
+                <img
+                  src="./img/card-9.jpg"
+                  alt="Ноутбук с приложением"
+                  width="370"
+                  height="294"
+                />
+                <div class="card-footer">
+                  <h2 class="cards">Growing Business</h2>
+                  <p class="cards-content">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
